# cpp_things

./: .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE  build.sh  cpp_weekly_11_std_future.cpp  cpp_weekly_11_std_future_bench.cpp  cpp_weekly_134_visitor.cpp  cpp_weekly_13_fib_binet.cpp  cpp_weekly_13_fib_template.cpp  cpp_weekly_189_fib_variable_template.cpp  cpp_weekly_189_variable_template.cpp  cpp_weekly_313_constexpr_static_string.cpp  cpp_weekly_314_all_ways_to_compile_time.cpp  cpp_weekly_318_curry_function.cpp  cpp_weekly_37_fib_stateful_lambda.cpp  cpp_weekly_37_fib_stateful_lambda_ext.cpp  fluentcpp_reverse-for-loops-in-cpp.cpp  fluentcpp_transform-adaptor-equivalent-in-cpp.cpp  foo.cpp  log.txt  longest_common_subsequence.cpp  ranges_dummy.cpp  relaxed  relaxed.cpp  rewrite_output.cpp  template_check_member.cpp  template_check_member.h
cci/: CMakeLists.txt
cci/heap/: CMakeLists.txt  main.cpp
cci/linked_list/: CMakeLists.txt  list.h  main.cpp
cci/tree_traversal/: CMakeLists.txt  main.cpp
cmake_add_definitions/: CMakeLists.txt  main.cpp
comp_firewall/: CMakeLists.txt  main.cpp  test.cpp  test.h  test_impl.h
json_test/: CMakeLists.txt  main.cpp
leetcode/: CMakeLists.txt  main.cpp
lib_interface_and_abstract_base/: CMakeLists.txt  main.cpp
lib_interface_and_abstract_base/lib/: CMakeLists.txt
lib_interface_and_abstract_base/lib/src/: test_lib_abstract.cpp
lib_interface_and_abstract_base/my_lib_extention/: CMakeLists.txt  my_lib.h
lib_interface_and_abstract_base/playground/: CMakeLists.txt
lib_interface_and_abstract_base/playground/include/: i_test_lib.h  test_lib_abstract.h
lib_interface_and_abstract_base/playground/my_lib_extention/: CMakeLists.txt  my_lib.cpp
modules_first_touch/: build.sh  foo.cppm  main.cpp
pimpl/: CMakeLists.txt  impl.h  main.cpp  widget.h
qnx_write/: CMakeLists.txt  qnxbuild.sh  write1.cpp
recursion/: CMakeLists.txt  main.cpp
thread_safe_singly_linked_list/: CMakeLists.txt  Dockerfile  a.out  main.cpp  test.cpp
